flowc/tests/fixtures/check_e152_unknown_rank_field.flow
type Plan = { id: string, cost: int }

tool best_plans() -> [Plan]
  effect deterministic

flow demo(Plan) -> [Plan] {
  ps = best_plans()
     | rank nope desc
  ps
}
